<package format="2">
  <name>rviz2</name>
  <version>7.0.3</version>
  <description>
    3D visualization tool for ROS.
  </description>
  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author>D. Hood</author>
  <author>Josh Faust</author>

  <url type="website">https://github.com/ros2/rviz/blob/ros2/README.md</url>
  <url type="repository">https://github.com/ros2/rviz</url>
  <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <!-- this ensures some basic plugins are available when installing just rviz2 -->
  <exec_depend>rviz_default_plugins</exec_depend>

  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
