<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rviz2</name>
  <version>13.3.1</version>
  <description>
    3D visualization tool for ROS.
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros2/rviz/blob/ros2/README.md</url>
  <url type="repository">https://github.com/ros2/rviz</url>
  <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

  <author>D. Hood</author>
  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author>Josh Faust</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>
  <author email="scott@openrobotics.org">Scott K Logan</author>
  <author email="william@openrobotics.org">William Woodall</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <!-- this ensures some basic plugins are available when installing just rviz2 -->
  <exec_depend>rviz_default_plugins</exec_depend>

  <!-- For RViz 1 to 2 conversion script -->
  <exec_depend>python3</exec_depend>

  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>

  <!-- TODO(jacobperron): Replace with ament_lint_common when ament_copyright is working -->
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>python3-yaml</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
